--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
 
-<script> window.chtlConfig = { chatbotId: "5884455479" } </script>
-<script async data-id="5884455479" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
+<!-- <script> window.chtlConfig = { chatbotId: "5884455479" } </script>
+<script async data-id="5884455479" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script> -->
+    <script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/03/30/07/20250330070630-SXIQ43RR.js"></script>
   </body>
 </html>
